<resources>
    <string name="app_name">GUID ME</string>
    <string name="splash_image">Splash Image</string>
    <string name="logo">Logo</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_your_password">Foret Password?</string>
    <string name="register">Register</string>
    <string name="sure_delete">Are your to delete?</string>
    <string name="delete">Delete</string>
    <string name="full_name">Full Name</string>
    <string name="mobile">Mobile</string>
    <string name="country">Country</string>
    <string name="health_status">Health Status</string>
    <string name="birth_date">Birth date</string>
    <string name="emergency_number">Emergency Number</string>
    <string name="sos">SOS</string>
    <string name="select_your_language">Select your Language:</string>
    <string name="emergenccy_numbers">Emergency Numbers</string>
    <string name="select_all">Select All</string>
    <string name="clear">Clear</string>
    <string name="capture">Capture</string>
    <string name="translate">Translate</string>
    <string name="rule">Rule</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
</resources>
