<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo2"
                android:contentDescription="@string/logo" />

            <EditText
                android:id="@+id/phoneNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="phone"
                android:hint="@string/phone_number"
                android:singleLine="true" />


            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true" />

            <!-- Login Button -->

            <Button
                android:id="@+id/loginButton"
                android:layout_gravity="center"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:background="@drawable/buttonshape"
                android:text="@string/login"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/resetPasswordButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/forget_your_password"
                android:textSize="15sp"
                android:layout_marginBottom="20dp"/>


            <TextView
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/register"
                android:textSize="15sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>